concrete controller class added MVC linking added loading & saving logic added